--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,3 +1,5 @@
+@import "vendors/daterangepicker.scss";
+
 .wprt_keyword {
   &.wprt_show_popup {
     &:after {
@@ -10,6 +12,13 @@
       top: 0;
     }
   }
+
+  // Vendors
+  @import "vendors/tom-select.min.scss";
+  @import "vendors/jquery.dataTables.min.scss";
+  @import "vendors/buttons.dataTables.min.scss";
+  @import "vendors/uikit.min.scss";
+  @import "vendors/flag-icons.min.scss";
   
   //Base
   @import 'base/variables.scss';
@@ -20,12 +29,11 @@
   @import 'base/breakpoints.scss';
 
   // Vendors
-  @import "~tom-select/dist/css/tom-select.min.css";
-  @import "~daterangepicker/daterangepicker.css";
-  @import "~datatables.net-dt/css/jquery.dataTables.min.css";
-  @import "~datatables.net-buttons-dt/css/buttons.dataTables.min.css";
-  @import "~uikit/dist/css/uikit.min.css";
-  @import "vendors/flag-icons.min.css";
+  @import "vendors/tom-select.min.scss";
+  @import "vendors/jquery.dataTables.min.scss";
+  @import "vendors/buttons.dataTables.min.scss";
+  @import "vendors/uikit.min.scss";
+  @import "vendors/flag-icons.min.scss";
 
   // Atoms
   @import 'atoms/button.scss';
@@ -46,4 +54,5 @@
   @import 'sections/activation';
   @import 'sections/settings';
 }
+
 @import "components/admin-menu";
