--- a/resources/css/base/_reset.scss
+++ b/resources/css/base/_reset.scss
@@ -6,3 +6,10 @@ body {
 a, input[type="submit"] {
   cursor: pointer;
 }
+
+.currency-symbol {
+  font-size: 0.5em;
+  position: relative;
+  top: -0.8em;
+  font-weight: 500;
+}
