--- a/resources/css/sections/_activation.scss
+++ b/resources/css/sections/_activation.scss
@@ -108,7 +108,7 @@
       margin-bottom:5px;
       padding-bottom: 5px;
     
-      width: 80%;
+      width: 85%;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -209,6 +209,10 @@
       padding-right: 0;
       text-align: center;
       margin-bottom:20px;
+      
+      @include hover-active-focus {
+        text-decoration: none;
+      }
     }
   }
   
