--- a/resources/css/sections/_keyword-table.scss
+++ b/resources/css/sections/_keyword-table.scss
@@ -1,7 +1,7 @@
 .wprt_keyword_list {
   &_table {
-    margin-top: 60px;
-    margin-bottom: 10px;
+    margin-top: 60px !important;
+    margin-bottom: 10px !important;
     border: 1px solid #E9E9E9 !important;
     border-radius: 7px;
 
