--- a/resources/css/components/_overview.scss
+++ b/resources/css/components/_overview.scss
@@ -1,6 +1,4 @@
 .wprt_overview {
-  padding: 10px 30px 20px 30px;
-  border: 2px solid #E9E9E9;
   border-radius: 7px;
 
   &_container {
@@ -15,11 +13,11 @@
   }
   
   &_boxes {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
+    display: flex;
     grid-gap: 15px;
-    flex: 1;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 30px;
   }
   
   &_logo {
@@ -41,33 +39,47 @@
   }
   
   &_box {
-    background: linear-gradient(0deg, #F8F8F8 0%, #F8F8F8 100%), #F8F8F8;
-    border-radius: 7px;
-    padding:10px 20px;
+    position: relative;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    grid-gap: 10px;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid #edf2f9;
+    border-radius: .5rem;
+    border-color: #edf2f9;
+    box-shadow: 0 .75rem 1.5rem rgba(18, 38, 63, .03);
+    max-width: 260px;
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1.5rem;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     
-    &.rank {
-      flex-direction: row;
-      justify-content: space-between;
+    > div {
+      flex-basis: 0;
+      flex-grow: 1;
+      max-width: 100%;
     }
     
     &_icon {
-      width: 75px;
+      text-align: end;
     }
     
     &_title {
-      @include type(16, 20);
+      @include type(10, 11);
       @include medium;
-      color: $title-light-color;
+      color: #95aac9;
+      letter-spacing: .08em;
+      margin-bottom: 5px;
     }
     
     &_count {
-      @include type(30, 35);
-      @include semi-bold;
-      color: $title-color;
+      @include type(20, 22);
+      @include medium;
+      color: #12263f;
+      
       
       span {
         @include type(16, 20);
@@ -76,14 +88,14 @@
       }
     }
     
-    &_rank {
-      display:flex;
-      flex-direction: column;
-      margin-top: 10px;
-      grid-gap: 5px;
+    &_content {
+      font-size: 20px !important;
+      line-height: 22px !important;
+      align-items: center;
       
-      &.reverse {
-        flex-direction: column-reverse;
+      span {
+        font-size: 12px !important;
+        line-height: 14px !important;
       }
     }
     
