--- a/resources/css/layout/_header.scss
+++ b/resources/css/layout/_header.scss
@@ -6,6 +6,7 @@
   align-items: center;
   margin-bottom: rem($md-padding*2);
   justify-content: space-between;
+  width: calc(100% - 40px);
 
   &_right {
     display: flex;
