--- a/resources/css/sections/_keyword-list.scss
+++ b/resources/css/sections/_keyword-list.scss
@@ -10,6 +10,13 @@
     box-shadow: 0 .75rem 1.5rem rgba(18, 38, 63, .03);
     padding: 20px 40px;
     
+    @include media-breakpoint(xl-m) {
+      padding: 20px 20px;
+      margin: 0 20px;
+      max-width: unset !important;
+      width: calc(100% - 80px);
+    }
+    
     .wpc_rt_keywords_alert {
       position: fixed;
       top: 35%;
