--- a/resources/css/base/_variables.scss
+++ b/resources/css/base/_variables.scss
@@ -1,11 +1,7 @@
-$primary-color: #2d56d2;
-$primary-dark-color: #0b1460;
 $purple-color: #581BCA;
 $yellow-color: #EFE27F;
 
 $secondary-light-color: #89D99D;
-$secondary-color: #5ABD9E;
-$secondary-dark-color: #399F98;
 $fetchrank-bg: #229ccc;
 
 $third-color: #c7d8ff;
@@ -13,6 +9,8 @@ $third-dark-color: #5c6185;
 $third-light-color: #F9F9F9;
 
 $border-gray: #b5bfc9;
+$border-light-gray: #edf2f9;
+$border-input: #ebebeb;
 $placeholder-color: #ACABAB;
 $light-gray-color: #C5BEBE;
 $light-gray-text-color: #ABADB4;
@@ -45,3 +43,7 @@ $primary-color: #5603AD;
 $primary-dark-color: #420384;
 $secondary-color: #C2F8CB;
 $secondary-dark-color: #7eec90;
+
+$primary-blue-color: #3ebef2;
+
+$background-offwhite: #F8F8F8;
